# ncnn-android-yolov8

./: README.md  local.properties  yolov8-seg.cpp
app/src/main/java/com/tencent/yolov8ncnn/: MainActivity.java
app/src/main/res/values/: strings.xml
ncnn-android-yolov8/: README.md
ncnn-android-yolov8/app/: build.gradle
ncnn-android-yolov8/app/src/main/: AndroidManifest.xml
ncnn-android-yolov8/app/src/main/assets/: yolov8n.param  yolov8s.param
ncnn-android-yolov8/app/src/main/jni/: CMakeLists.txt  yolo.cpp  yolo.h  yolov8ncnn.cpp
ncnn-yolov8s-obb/: yolov8-obb.cpp
ncnn-yolov8s-obb/models/: v8n-obb.param  v8s-obb.param
ncnn-yolov8s-seg/: CMakeLists.txt  yolov8-seg.cpp
ncnn-yolov8s-seg/models/: yolov8s-seg.param
